--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 import streamlit as st
 import pandas as pd
 import numpy as np
-from statsmodels.tsa.statespace.sarimax import SARIMAX
+import statsmodels.api as sm
 import matplotlib.pyplot as plt
-from io import BytesIO
