--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-import streamlit as st
-import pandas as pd
-import numpy as np
-import statsmodels.api as sm
-import matplotlib.pyplot as plt
+import streamlit
+import pandas
+import numpy
+import statsmodels.api
+import matplotlib.pyplot
