--- a/requirements.txt
+++ b/requirements.txt
@@ -1,154 +1,5 @@
-altair==5.4.1
-anyio==4.4.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astroid==3.3.5
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-backcall==0.2.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.0
-cycler==0.12.1
-debugpy==1.8.5
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.9
-docopt==0.6.2
-dodgy==0.2.1
-executing==2.0.1
-fastjsonschema==2.20.0
-flake8==7.1.1
-flake8-polyfill==1.0.2
-fonttools==4.54.1
-fqdn==1.5.1
-gitdb==4.0.11
-GitPython==3.1.43
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
-idna==3.8
-ipykernel==6.29.5
-ipython==8.12.3
-isoduration==20.11.0
-isort==5.13.2
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kiwisolver==1.4.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mccabe==0.7.0
-mdurl==0.1.2
-mistune==3.0.2
-narwhals==1.11.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook_shim==0.2.4
-numpy==2.1.2
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-patsy==0.5.6
-pep8-naming==0.10.0
-pickleshare==0.7.5
-pillow==10.4.0
-pipreqs==0.5.0
-platformdirs==4.2.2
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-prospector==1.12.1
-protobuf==5.28.3
-psutil==6.0.0
-pure_eval==0.2.3
-pyarrow==17.0.0
-pycodestyle==2.12.1
-pycparser==2.22
-pydeck==0.9.1
-pydocstyle==6.3.0
-pyflakes==3.2.0
-Pygments==2.18.0
-pylint==3.3.1
-pylint-celery==0.3
-pylint-django==2.6.1
-pylint-flask==0.6
-pylint-plugin-utils==0.8.2
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-pytz==2024.2
-pywin32==306
-pywinpty==2.0.13
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-requests==2.32.3
-requirements-detector==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.3
-rpds-py==0.20.0
-scikit-learn==1.5.2
-scipy==1.14.1
-seaborn==0.13.2
-semver==3.0.2
-Send2Trash==1.8.3
-setoptconf-tmp==0.3.1
-setuptools==74.0.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-snowballstemmer==2.2.0
-soupsieve==2.6
-stack-data==0.6.3
-statsmodels==0.14.4
-streamlit==1.39.0
-tenacity==9.0.0
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.3.0
-toml==0.10.2
-tomlkit==0.13.2
-tornado==6.4.1
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20240821
-typing_extensions==4.12.2
-tzdata==2024.2
-uri-template==1.3.0
-urllib3==2.2.2
-watchdog==5.0.3
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-yarg==0.1.9
+streamlit
+pandas
+numpy
+statsmodels
+matplotlib
